data/derived/comb/progs/unify/prog4549.ml.out
Characters 63-66:
  | VarY -> "y"b
            ^^^
Error: This expression has type string
       This is not a function; it cannot be applied.
